// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly with advanced header 1`] = `
<DocumentFragment>
  .cache-wk9y1q-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wk9y1q-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-wk9y1q-Stack-StyledStack exwxj841"
    data-disabled="false"
  >
    <h2>
      Advanced Title
    </h2>
    <div
      class="cache-1oinfoa-BorderedBox exwxj840"
      data-disabled="false"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with className 1`] = `
<DocumentFragment>
  .cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="test cache-1oinfoa-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with data-testid 1`] = `
<DocumentFragment>
  .cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-1oinfoa-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
    data-testid="test"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled 1`] = `
<DocumentFragment>
  .cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-1oinfoa-BorderedBox exwxj840"
    data-disabled="true"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled and header 1`] = `
<DocumentFragment>
  .cache-wk9y1q-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wk9y1q-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-1xtpjp9-StyledText {
  font-size: 25px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-wk9y1q-Stack-StyledStack exwxj841"
    data-disabled="true"
  >
    <h2
      class="cache-1xtpjp9-StyledText e13y3mga0"
    >
      Title
    </h2>
    <div
      class="cache-1oinfoa-BorderedBox exwxj840"
      data-disabled="true"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with header 1`] = `
<DocumentFragment>
  .cache-wk9y1q-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wk9y1q-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-1xtpjp9-StyledText {
  font-size: 25px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-wk9y1q-Stack-StyledStack exwxj841"
    data-disabled="false"
  >
    <h2
      class="cache-1xtpjp9-StyledText e13y3mga0"
    >
      Title
    </h2>
    <div
      class="cache-1oinfoa-BorderedBox exwxj840"
      data-disabled="false"
      data-is-active="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with isActive 1`] = `
<DocumentFragment>
  .cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-1oinfoa-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="true"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly without header 1`] = `
<DocumentFragment>
  .cache-1oinfoa-BorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
}

.cache-1oinfoa-BorderedBox[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.cache-1oinfoa-BorderedBox[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

<div
    class="cache-1oinfoa-BorderedBox exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    Hello
  </div>
</DocumentFragment>
`;
